--- a/palladio/1.html
+++ b/palladio/1.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
   		<meta charset="utf-8">
-  		<title>background-size</title>
+  		<title>Palladio</title>
  	</head>
  	<style>
  		body{
